// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Grid slice should correctly render CardGrid component 1`] = `
<div>
  <section
    class="grid-lottie"
  >
    <lazyhydrate-stub
      idletimeout="2000"
      whenvisible="true"
    >
      <gridlottie-stub
        class="aos-init aos-animate"
        data-aos="fade-up"
        data-testid="card-lottie"
      />
    </lazyhydrate-stub>
  </section>
</div>
`;

exports[`Card Grid slice should correctly render CardGridWithIcon component 1`] = `
<div>
  <section
    class="grid-lottie"
  >
    <lazyhydrate-stub
      idletimeout="2000"
      whenvisible="true"
    >
      <gridlottielink-stub
        class="aos-init aos-animate"
        data-aos="fade-up"
        data-testid="card-lottie-link"
      />
    </lazyhydrate-stub>
  </section>
</div>
`;
